# api/swagger/swagger.json
@@ -225,6 +225,39 @@
                 }
             }
         },
+        "/cart/checkout": {
+            "post": {
+                "tags": [
+                    "Cart"
+                ],
+                "summary": "It will give checkout URL in response",
+                "description": "",
+                "operationId": "",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "Checkout Object",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/Checkout"
+                        }
+                    }
+                ],
+                
+                "responses": {
+                    "default": {
+                        "description": "successful operation"
+                    }
+                }
+            }
+        },
         "/languages": {
             "post": {
                 "tags": [
@@ -458,6 +491,15 @@
                     "required": "true"
                 },
                 "user_id": {
+                    "type": "integer",
+                    "required": "true"
+                }
+            }
+        },
+        "Checkout": {
+            "type": "object",
+            "properties": {
+                "cart_id": {
                     "type": "integer",
                     "required": "true"
                 }
